quic/s2n-quic-platform/src/bpf/cbpf/snapshots/s2n_quic_platform__bpf__cbpf__tests__example_interface_index_13_display.snap
---
source: quic/s2n-quic-platform/src/bpf/cbpf/tests.rs
expression: prog
---
l0   : LD ifidx ; [0xfffff008] // skb->dev->ifindex
l1   : JEQ #13,l2,l3
l2   : RET #4294967295
l3   : RET #0
