quic/s2n-quic-platform/src/bpf/cbpf/snapshots/s2n_quic_platform__bpf__cbpf__tests__example_vlan_w_id_10_display.snap
---
source: quic/s2n-quic-platform/src/bpf/cbpf/tests.rs
expression: prog
---
l0   : LD vlan_tci ; [0xfffff02c] // skb_vlan_tag_get(skb)
l1   : JEQ #10,l2,l3
l2   : RET #4294967295
l3   : RET #0
