quic/s2n-quic-platform/src/bpf/cbpf/snapshots/s2n_quic_platform__bpf__cbpf__tests__first_byte_routing_debug.snap
---
source: quic/s2n-quic-platform/src/bpf/cbpf/tests.rs
expression: prog
---
Program {
    instructions: [
        Instruction {
            code: 48,
            jt: 0,
            jf: 0,
            class: LD,
            size: B,
            mode: ABS,
            k: 0,
        },
        Instruction {
            code: 84,
            jt: 0,
            jf: 0,
            class: ALU,
            op: AND,
            k: 0xc0,
        },
        Instruction {
            code: 21,
            jt: 0,
            jf: 1,
            class: JMP,
            op: JEQ,
            jf: 1,
            k: 0x40,
        },
        Instruction {
            code: 6,
            jt: 0,
            jf: 0,
            class: RET,
            size: W,
            mode: IMM,
            k: 0,
        },
        Instruction {
            code: 6,
            jt: 0,
            jf: 0,
            class: RET,
            size: W,
            mode: IMM,
            k: 0x1,
        },
    ],
}
