quic/s2n-quic-platform/src/bpf/cbpf/snapshots/s2n_quic_platform__bpf__cbpf__tests__hash_routing_display.snap
---
source: quic/s2n-quic-platform/src/bpf/cbpf/tests.rs
expression: prog
---
l0   : LD rxhash ; [0xfffff020] // skb->hash
l1   : AND #1
l2   : RET %a
